--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
       <script type="text/javascript" src="js/variableList.js"></script>
       <script type="text/javascript" src="js/myscript.js"></script>
       <script type="text/javascript" src="js/keyboard.js"></script>
+      <script type="text/javascript" src="js/mouse.js"></script>
       <script type="text/javascript" src="js/blockPieces.js"></script>
       <script type="text/javascript" src="js/gameTimer.js"></script>
       
       <script type="text/javascript" src="js/imageLib.js"></script>
+      <script type="text/javascript" src="js/interface.js"></script>
       <script type="text/javascript" src="js/physicMechanics.js"></script>
       <script type="text/javascript" src="js/intersections.js"></script>
       
