--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <title>State Wars</title>
-      <meta name="description" content="Survive and take over the world!" />
+      <title>Element Race</title>
+      <meta name="description" content="Survive longer than your enemy." />
 
       <!-- Stylesheets -->
       <link href="css/styles.css" rel="stylesheet" type="text/css" />
@@ -20,8 +20,8 @@
          <div id="gameContent">            
             <!-- Game Information Display --> 
             <div class="gameMenuDiv">
-               <!-- Game Title -->
-               <h1>State Wars</h1>
+               <!-- Game Title --
+               <h1>State Wars</h1-->
             </div>
 
             <!-- Canvas -->
